spacing fixed

--- a/src/SwipeButtons.css
+++ b/src/SwipeButtons.css
@@ -4,11 +4,13 @@
     width: 100%;
     bottom: 10vh;
     display: flex;
+    z-index: 10000;
+    margin-top: 1000px;
 }
 
 .swipeButtons .MuiIconButton-root{
     background-color: white;
-    box-shadow: 0px 10px 43px 0px black !important;
+    box-shadow: 0px 10px 40px 0px black !important;
 }
 
 .swipeButtons__repeat {
