--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -15,7 +15,8 @@
 .tinderCards__cardContainer {
     display: flex;
     justify-content: center;
-    margin-top: 10vh;
+    margin-top: 4vh;
+    /* z-index: 1000; */
 }
 
 .swipe {
